css/main.css
/* ... */
  @media (min-width: 992px) and (max-width: 1199px) {
    .container .lg-1 {
      width: calc(960px / 12 * 1 - 30px); }
    .container .o-lg-1 {
      margin-left: calc(960px / 12 * 1 + 15px); }
    .container .lg-2 {
      width: calc(960px / 12 * 2 - 30px); }
    .container .o-lg-2 {
      margin-left: calc(960px / 12 * 2 + 15px); }
    .container .lg-3 {
      width: calc(960px / 12 * 3 - 30px); }
    .container .o-lg-3 {
      margin-left: calc(960px / 12 * 3 + 15px); }
    .container .lg-4 {
      width: calc(960px / 12 * 4 - 30px); }
    .container .o-lg-4 {
      margin-left: calc(960px / 12 * 4 + 15px); }
    .container .lg-5 {
      width: calc(960px / 12 * 5 - 30px); }
    .container .o-lg-5 {
      margin-left: calc(960px / 12 * 5 + 15px); }
    .container .lg-6 {
      width: calc(960px / 12 * 6 - 30px); }
    .container .o-lg-6 {
      margin-left: calc(960px / 12 * 6 + 15px); }
    .container .lg-7 {
      width: calc(960px / 12 * 7 - 30px); }
    .container .o-lg-7 {
      margin-left: calc(960px / 12 * 7 + 15px); }
    .container .lg-8 {
      width: calc(960px / 12 * 8 - 30px); }
    .container .o-lg-8 {
      margin-left: calc(960px / 12 * 8 + 15px); }
    .container .lg-9 {
      width: calc(960px / 12 * 9 - 30px); }
    .container .o-lg-9 {
      margin-left: calc(960px / 12 * 9 + 15px); }
    .container .lg-10 {
      width: calc(960px / 12 * 10 - 30px); }
    .container .o-lg-10 {
      margin-left: calc(960px / 12 * 10 + 15px); }
    .container .lg-11 {
      width: calc(960px / 12 * 11 - 30px); }
    .container .o-lg-11 {
      margin-left: calc(960px / 12 * 11 + 15px); }
    .container .lg-12 {
      width: calc(960px / 12 * 12 - 30px); }
    .container .o-lg-12 {
      margin-left: calc(960px / 12 * 12 + 15px); }
    .container .lg-hidden {
      display: none; }
    .container .lg-invisible {
      opacity: 0; } }
  @media (min-width: 1200px) {
    .container .xl-1 {
      width: calc(960px / 12 * 1 - 30px); }
    .container .o-xl-1 {
      margin-left: calc(960px / 12 * 1 + 15px); }
    .container .xl-2 {
      width: calc(960px / 12 * 2 - 30px); }
    .container .o-xl-2 {
      margin-left: calc(960px / 12 * 2 + 15px); }
    .container .xl-3 {
      width: calc(960px / 12 * 3 - 30px); }
    .container .o-xl-3 {
      margin-left: calc(960px / 12 * 3 + 15px); }
    .container .xl-4 {
      width: calc(960px / 12 * 4 - 30px); }
    .container .o-xl-4 {
      margin-left: calc(960px / 12 * 4 + 15px); }
    .container .xl-5 {
      width: calc(960px / 12 * 5 - 30px); }
    .container .o-xl-5 {
      margin-left: calc(960px / 12 * 5 + 15px); }
    .container .xl-6 {
      width: calc(960px / 12 * 6 - 30px); }
    .container .o-xl-6 {
      margin-left: calc(960px / 12 * 6 + 15px); }
    .container .xl-7 {
      width: calc(960px / 12 * 7 - 30px); }
    .container .o-xl-7 {
      margin-left: calc(960px / 12 * 7 + 15px); }
    .container .xl-8 {
      width: calc(960px / 12 * 8 - 30px); }
    .container .o-xl-8 {
      margin-left: calc(960px / 12 * 8 + 15px); }
    .container .xl-9 {
      width: calc(960px / 12 * 9 - 30px); }
    .container .o-xl-9 {
      margin-left: calc(960px / 12 * 9 + 15px); }
    .container .xl-10 {
      width: calc(960px / 12 * 10 - 30px); }
    .container .o-xl-10 {
      margin-left: calc(960px / 12 * 10 + 15px); }
    .container .xl-11 {
      width: calc(960px / 12 * 11 - 30px); }
    .container .o-xl-11 {
      margin-left: calc(960px / 12 * 11 + 15px); }
    .container .xl-12 {
      width: calc(960px / 12 * 12 - 30px); }
    .container .o-xl-12 {
      margin-left: calc(960px / 12 * 12 + 15px); }
    .container .xl-hidden {
      display: none; }
    .container .xl-invisible {
      opacity: 0; } }

.header {
  width: 100vw;
  height: 60px;
  position: fixed;
  top: 0;
  left: 0;
  background: #191747;
  z-index: 1000;
  box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5); }
  .header .container {
    height: 60px; }
    .header .container .header-content {
      font-weight: 400;
      height: inherit;
      line-height: 57px;
      color: #F6F6F6;
      text-decoration: none; }
    .header .container .logo-wrapper {
      display: -webkit-box;
      display: flex;
      -webkit-box-align: center;
              align-items: center; }
      .header .container .logo-wrapper .logo-img {
        height: 3rem;
        width: 3rem;
        min-width: 3rem; }
      .header .container .logo-wrapper .logo-text {
        font-size: 3rem;
        line-height: 3rem;
        letter-spacing: -3px;
        text-align: left;
        padding-bottom: .5rem;
        box-sizing: content-box; }
    .header .container .profile-menu {
      height: 60px;
      position: relative; }
      .header .container .profile-menu .menu-switcher {
        opacity: 0;
        width: 100%;
        height: 100%;
        margin: 0;
        position: absolute;
        top: 0;
        left: 0;
        cursor: pointer; }
        .header .container .profile-menu .menu-switcher:checked ~ .menu-content {
          display: block; }
      .header .container .profile-menu .menu-underlay {
        display: -webkit-box;
        display: flex;
        flex-wrap: nowrap;
        -webkit-box-align: center;
                align-items: center;
        -webkit-box-pack: end;
                justify-content: flex-end; }
        .header .container .profile-menu .menu-underlay .name {
          color: #F6F6F6;
          margin-right: 5px;
          height: 60px;
          text-align: right; }
        .header .container .profile-menu .menu-underlay .avatar {
          height: 40px;
          width: 40px;
          min-height: 40px;
          min-width: 40px;
          border-radius: 50%; }
      .header .container .profile-menu .menu-content {
        display: none;
        list-style: none;
        background: #191747;
        width: 160px;
        float: right;
        box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5); }
/* ... */

